store json in temp-files, use relative URL to yaml in HTML-view