@@ -1,11 +1,9 @@
 package io.quarkiverse.asyncapi.annotation.scanner;
 
-import static io.quarkiverse.asyncapi.annotation.scanner.AsyncApiRecorder.FOLDER;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.stream.Collectors;
+import java.nio.file.Paths;
 
 import org.junit.jupiter.api.Test;
 
@@ -22,7 +20,8 @@ public class AsyncApiAnnotationScannerUnFilteredTest {
     @Test
     void shouldScanAndFilterEmitterAnnotations() throws Exception {
         //given
-        String yaml = Files.readAllLines(Path.of(FOLDER + "/asyncApi.yaml")).stream().collect(Collectors.joining("\n"));
+        String yaml = Files
+                .readString(Paths.get(getClass().getClassLoader().getResource("META-INF/resources/asyncApi.yaml").toURI()));
         assertThat(yaml).isNotNull();
         JsonNode asyncAPI = ObjectMapperFactory.yaml().readTree(yaml);
         //when
